# cove-agent-manager

./: .env.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  HARNESS_LINKS.md  docker-compose.yml  features.json  harness.json  init.sh  pyproject.toml
cove/: config.py
cove/api/: main.py  usage.py
cove/api/routes/: config.py  sessions.py  websocket.py
cove/harness/: anthropic_client.py  auto_mode.py  context_builder.py  crash_recovery.py  engine.py  llm_client.py  mock_client.py  permissions.py  session_resume.py  tool_router.py
cove/orchestration/: planner.py  subagent.py
cove/sandbox/: manager.py
cove/sandbox/providers/: base.py  local.py
cove/security/: mcp_proxy.py  vault.py
cove/session_store/: models.py  service.py
dashboard/: index.html  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css  setupTests.ts
dashboard/src/__tests__/: Dashboard.test.tsx
dashboard/src/agents/: AgentCard.tsx  AgentCardGrid.tsx  MetricsBar.tsx  SessionTable.tsx
docs/: architecture.md  cove-agent-manager-design.md  quality.md
harness/: goal.md  handoff.md
k8s/cove/: Chart.yaml  values.yaml
scripts/: run_change_guard.sh  run_drift_check.sh  scaffold_harness.sh
tests/: conftest.py  test_auto_mode.py  test_context_builder.py  test_crash_recovery.py  test_harness.py  test_harness_exists.py  test_mcp_proxy.py  test_permissions.py  test_planner.py  test_sandbox.py  test_session_resume.py  test_session_store.py  test_subagent.py  test_tool_router.py  test_usage_tracking.py  test_vault.py  test_websocket.py  test_websocket_ext.py
(+35 files in other folders)
